Mon Dec 14  6:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/GNUmakefile: Put mframe.h in a machine/os specific directory.
	* src/Makefile.postamble: Install mframe.h in machine/os specific dir
	* src/NSConnection.m: include mframe.h form new location.
	* src/NSInvocation.m: ditto
	* src/NSMethodSignature.m: ditto
	* src/NSObjCRuntime.m: ditto
	* src/NSSerializer.m: ditto
	* src/mframe.m: ditto

Sat Dec 12 21:10:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSUserDefaults.m: ([+standardUserDefaults]) set flag to avoid
	infinite recursion on initialisation. Error reported by
	Matthias Klose <doko@cs.tu-berlin.de>

Sat Dec 12 17:40:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/GSConfig.h.in: Added new file for machine/os specific
	info that is relevent to things outside the base library.
	* configure.in: Build GSConfig.h
	* configure: Build GSConfig.h
	* src/GNUmakefile: Move GSConfig.h into place
	* src/Makefile.postamble: Install GSConfig.h
	* src/include/NSByteOrder.h: include GSConfig.h

Sat Dec 12 15:40:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/Makefile.postamble: Added check that you are installing gdomap
	as root and output warnign if not.

Mon Dec  7 10:00:34 1998  Adam Fedor  <fedor@ultra.doc.com>

	* src/NSConcreteNumber.m ([NumberTemplate
	-descriptionWithLocale:]): Print BOOL value as a special case.

	* src/NSProcessInfo.m: Use fake-main if FreeBSD.
	* src/include/fake-main.h: Likewise.

Sun Dec  6 20:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSDate.m: removed +initialize - moved default locale info to
	NSUserDefaults.
	* src/NSUserDefaults.m: Added code to set up default locale info.

Thu Dec  3 16:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSDictionary.m: Removed filesystem methods - conflict with
	versions in NSFileManger.
	* src/include/NSDictionary.h: Ditto